# javis

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
javis/: __main__.py  agent.py  helper.py  ingest.py  settings.py  telegram_bot.py
javis/ingest/: __main__.py  resume.py
javis/injest/: __main__.py
javis/migrations/: 001_create_monitored_threads.py  __init__.py
javis/models/: gemini.py  monitored_thread.py
javis/tools/: calendar.py  database.py  email_base.py  email_monitor.py  email_monitor_task.py  filesystem.py  gmail.py  helpers.py  internet_search.py  messages.py  python.py  redis.py  resume.py  telegram.py  test_database.py  test_filesystem.py  test_python.py  test_redis.py  test_resume.py
