[project]
name = "javis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiomysql>=0.2.0",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.13.3",
    "duckduckgo-search>=8.0.0",
    "google-genai>=1.10.0",
    "httpx>=0.28.1",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "logfire>=3.12.0",
    "mcp[cli]>=1.6.0",
    "ollama>=0.4.7",
    "pydantic-ai-slim[mcp]>=0.0.53",
    "pydantic-graph>=0.0.53",
    "pypdf>=5.4.0",
    "python-telegram-bot>=22.0",
    "redis>=5.2.1",
]
